@@ -1,4 +1,5 @@
 -- v?? --
+* added tabSize() template function returning size of given array (int x[42] is 42).
 * TimerProcessCPU - high resolution timer for a given process' CPU time.
 * TimerThreadCPU - high resolution timer for a given thread's CPU time.
 * TimerRT - high resolution timer for a realtime measurements.
